# oslabs

lab1/: CmakeLists.txt  app.c  autoupdate.cmd  autoupdate.sh
lab2/: CMakeLists.txt  child_process.c  process_manager.c  test_util.c
lab3/: CMakeLists.txt  process_logger.cpp
lab4/: CMakeLists.txt  emulator.c  main.c
lab5/: CMakeLists.txt  client.c  serial.c
Новая папка/: CMakeLists.txt  main.c
